<resources>
    <string name="app_name">Calculator</string>
    <string name="search_calculations">Search calculations...</string>


    <string name="calculation_history_title">Calculation History</string>
    <string name="history_icon_desc">History icon</string>
    <string name="close_history_desc">Close history</string>

    <!-- Empty state strings -->
    <string name="no_calculations_yet">No calculations yet</string>
    <string name="history_will_appear_here">Your calculation history will appear here</string>
    <string name="empty_calculator_icon_desc">Empty calculator icon</string>

    <!-- Action button strings -->
    <string name="clear_all">Clear All</string>
    <string name="export">Export</string>
    <string name="use">Use</string>
    <string name="delete">Delete</string>

    <!-- History item strings -->
    <string name="copy_result_desc">Copy result</string>
    <string name="use_expression">Use expression</string>
    <string name="delete_item">Delete item</string>

    <!-- Toast messages -->
    <string name="result_copied">Result copied to clipboard</string>
    <string name="calculation_deleted">Calculation deleted</string>
    <string name="history_cleared">History cleared</string>

    <!-- Dialog strings -->
    <string name="clear_history_title">Clear History</string>
    <string name="clear_history_message">Are you sure you want to clear all calculation history?</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>

    <!-- Time strings -->
    <string name="just_now">Just now</string>
    <string name="minute_ago">1 minute ago</string>
    <string name="minutes_ago">%d minutes ago</string>
    <string name="hour_ago">1 hour ago</string>
    <string name="hours_ago">%d hours ago</string>
    <string name="day_ago">1 day ago</string>
    <string name="days_ago">%d days ago</string>
    <string name="week_ago">1 week ago</string>
    <string name="weeks_ago">%d weeks ago</string>
    <string name="history">History</string>
</resources>